fix: explicit color for sort buttons, flex and nowrap for sort buttons container

--- a/packages/web/src/components/layouts/SearchResults/SearchResults.module.scss
+++ b/packages/web/src/components/layouts/SearchResults/SearchResults.module.scss
@@ -53,6 +53,10 @@
 }
 
 .searchResultsSorters {
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+
   @include mobile-and-tablet {
     display: none;
   }
