--- a/packages/web/src/components/ui/SidebarMobileFilter/SidebarMobileFilter.module.scss
+++ b/packages/web/src/components/ui/SidebarMobileFilter/SidebarMobileFilter.module.scss
@@ -56,6 +56,7 @@
   padding: 0;
   background: transparent;
   font-weight: 500;
+  color: $black;
 }
 
 .sortIcon {
