--- a/packages/web/src/components/ui/SortsList/SortsList.module.scss
+++ b/packages/web/src/components/ui/SortsList/SortsList.module.scss
@@ -15,6 +15,7 @@
   background: transparent;
   font-size: 16px;
   padding: 19px 0;
+  color: $black;
 
   &:not(:last-child) {
     border-bottom: 1px solid $gray-border;
